# HypoModPy

./: .gitignore  HypoModPython.code-workspace  HypoModPython.py  hypobase.py  hypocontrols.py  hypodat old.py  hypodat.py  hypograph.py  hypogrid.py  hypomain.py  hypomod.py  hypomods.py  hypoparams.py  hyposcale.py  hypospikes.py  hypotools.py  oldcode.py  osmomod.py  pyproject.toml  spikedat.py  spikemod.py  wxtest.py
HypoModPy/: hypobase.py  hypodat.py  hypograph.py  hypomain.py  hypomods.py  hypoparams.py  hypoprint.py  hypoproject.py  hyposcale.py  hypospikes.py  hypotools.py
Init/: hypoprefs.ini  mainbox.ini  maintools.ini
