[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypomodpy"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "wxPython", "PyPubSub", "pyperclip"]

[tool.setuptools]
packages = ["HypoModPy"]
include-package-data = true

[tool.setuptools.package-data]
HypoModPy = ["resources/**/*"]